# libmswmm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  file-format-notes.md  make.sh  notes.md
assets/: create-assets.sh  nature.mp3.license  tübingen-old.jpg.license  tübingen.jpg.license
example-projects/: extract-xml.sh
example-projects/6.0.6000.16386/: README.md  empty-modified-audio-level.MSWMM  empty-with-metadata.MSWMM  empty.MSWMM  examples.md  image-5s+3.12s-transition.MSWMM  image-5s+3.12s.MSWMM  image-5s-fade-in-out.MSWMM  image-5s-fade-in.MSWMM  image-5s.MSWMM  one-sound-fade-mute-half-volume.MSWMM  one-sound.MSWMM
src/: Project.cpp  Project.hpp  TimelineItem.hpp  main.cpp  mswmm-project.cpp  mswmm-project.hpp
